# bytebot

./: .gitignore
docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.python.yml  python-desktop.Dockerfile  python.Dockerfile  start-desktop.sh  supervisord-desktop.conf
python/: .env.example  README.md  alembic.ini  pyproject.toml
python/alembic/: env.py
python/bytebot/: __init__.py
python/bytebot/ai/: __init__.py  client.py  models.py  service.py
python/bytebot/api/: __init__.py  desktop.py  main.py  ui.py
python/bytebot/api/v1/: __init__.py  api_router.py  messages.py  models.py  summaries.py  tasks.py
python/bytebot/core/: config.py  database.py  exceptions.py  logging.py
python/bytebot/desktop/: __init__.py  client.py  models.py  service.py
python/bytebot/models/: __init__.py  base.py  message.py  summary.py  task.py
python/bytebot/schemas/: __init__.py  message.py  summary.py  task.py
python/bytebot/services/: __init__.py  agent_service.py  message_service.py  model_service.py  summary_service.py  task_service.py
python/bytebot/shared/: __init__.py  ai_models.py  computer_action.py  message_content.py  summary_types.py  task_types.py
python/bytebot/ui/: __init__.py  main.py  server.py
python/bytebot/websocket/: __init__.py  events.py  manager.py  router.py
python/tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_core.py  test_desktop.py  test_integration.py  test_models.py  test_services.py  test_websocket.py
